added the flags for god sake